--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ font-family: Arial;
 font-size: 17px;
 font-weight: 700;
 display: inline-block;
-padding: 10px 15px !important;
+padding: 10px 18px !important;
 transition: 0.4s;
 }
 .main-navigation ul li a:hover{
@@ -49,4 +49,57 @@ color: #fff;
 }
 .main-navigation ul li a:active{
 background-color: #FF0000 !important;
+}
+.main-navigation ul li a img {
+    width: 18px;
+    margin-right: 7px;
+    position: relative;
+    bottom: 2px;
+}
+.camclients-hero-section{
+    overflow: hidden;
+}
+.camclients-hero-section img{
+    width: 235px !important;
+}
+.camclients-hero-content{
+    position: relative;
+    z-index: -1;
+}
+.camclients-hero-content::after{
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.29);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.camclient-hero-text {
+    position: absolute;
+    top: 21%;
+    left: 18%;
+    z-index: 10;
+}
+.camclient-hero-text h1{
+color: #FFF;
+text-align: center;
+text-shadow: 0px 0px 15px #F00;
+font-family: Sitka;
+font-size: 100px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 12.8px;
+}
+.camclient-hero-text h2{
+    color: #FFF;
+text-align: center;
+text-shadow: 0px 0px 8px #F00;
+font-family: Sitka;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
