--- a/style.css
+++ b/style.css
@@ -110,26 +110,48 @@ font-weight: 700;
 line-height: normal;
 letter-spacing: 12.8px;
 }
-.camclient-hero-text h2{
-color: #FFF;
-text-align: center;
-text-shadow: 0px 0px 8px #F00;
-font-family: Sitka;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+.camclient-hero-text h2 {
+    color: #FFF;
+    text-align: center;
+    text-shadow: 0px 0px 8px #F00;
+    font-family: Sitka;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    background: rgba(255, 255, 255, 0.15);
+    display: inline-block;
+    padding: 4px 35px;
+    border-radius: 40px;
 }
 
 .camclients-new-creator{
     background-color: #131720;
     overflow: hidden;
+    position: relative;
 }
 .creator-heading{
     font-size: 36px;
     font-weight: 400;
     font-family: rubik;
     color:#fff;
+}
+.carousel-buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    top: 110px !important;
+}
+.carousel-buttons .left-button{
+    background: none;
+    border: none;
+    margin-right: 10px;
+}
+.carousel-buttons .right-button{
+    background: none;
+    border: none;
+    margin-left: 10px;
 }
 .creator-carousel-items{}
 .creator-carousel-items .carousel-single-card{}
