--- a/style.css
+++ b/style.css
@@ -137,18 +137,21 @@ letter-spacing: 12.8px;
     color:#fff;
 }
 .carousel-buttons{
-    display: flex;
-    justify-content: space-between;
+    clear: both;
     align-items: center;
     position: relative;
-    top: 110px !important;
+    top: 90px !important;
 }
 .carousel-buttons .left-button{
+    float: left;
+    width: 50px;
     background: none;
     border: none;
     margin-right: 10px;
 }
 .carousel-buttons .right-button{
+    float: right;
+    width: 50px;
     background: none;
     border: none;
     margin-left: 10px;
@@ -160,6 +163,8 @@ letter-spacing: 12.8px;
     border-radius: 50%;
     max-width: 170px;
     width: 100%;
+    cursor: pointer;
+    z-index: 9;
 }
 .creator-carousel-items .carousel-single-card .carousel-single-image.active-creator img{
     border: 5px solid #03FF5C80;
@@ -189,6 +194,26 @@ color: rgba(255, 239, 55, 0.48);
 font-family: Rubik;
 font-size: 36px;
 font-weight: 400;
+}
+.camclients-Trending-creator-carousel-buttons{
+    clear: both;
+    align-items: center;
+    position: relative;
+    top: 90px !important;
+}
+.camclients-Trending-creator-carousel-buttons .left-button{
+    float: left;
+    width: 50px;
+    background: none;
+    border: none;
+    margin-right: 10px;
+}
+.camclients-Trending-creator-carousel-buttons .right-button{
+    float: right;
+    width: 50px;
+    background: none;
+    border: none;
+    margin-left: 10px;
 }
 .camclients-Trending-user-name{
     font-size: 36px;
